# ROS_Test

./: .gitignore  README.md  motor.sh  test.sh
src/demo_cpp_pkg/: CMakeLists.txt  package.xml
src/demo_cpp_pkg/src/: demo_cpp_node.cpp
src/rm_control_cpp_pkg/: CMakeLists.txt  package.xml
src/rm_control_cpp_pkg/src/: USB2CAN_node.cpp
src/test_pkg/: package.xml  setup.py
src/test_pkg/launch/: demo.launch.py
src/test_pkg/test_pkg/: CAN_control_node.py  CAN_monitor_node.py  DJI_motor_control_node.py  GM6020_control_node.py  GM6020_monitor_node.py  GM6020_node.py  Keyboard_node.py  USB2CAN_receive_node.py  USB2CAN_send_node.py
